--- a/faculty.html
+++ b/faculty.html
@@ -11,7 +11,7 @@ title: Faculty members
 <table class="table table-striped">
   {% for fac in site.data.faculty %}
   <tr>
-    <td class="col-md-7"><div><h4>{{ fac.name }}, (Ph.D., {{ fac.phd }})</h4> </div>
+    <td class="col-md-7"><div><h4>{{ fac.name }} (Ph.D., {{ fac.phd }})</h4> </div>
       <div class="">
         <strong>Research areas:</strong> {{ fac.research-areas}}
       </div>
