updates, maily to "degree programs"

--- a/career.html
+++ b/career.html
@@ -1,47 +1,19 @@
 ---
 ---
-<center>
-                  </td>
-                </tr>
-              </table>
-              <p>&nbsp;</p>
-              <p>&nbsp;</p>
-            </td>
-            <td valign="top" >
-			<p><img src="images/lnk-care.gif" width="210" height="19" alt="Career in Mathematics"><br>   
+
 		    This is the golden age (as far as job opportunities	are concerned) for Masters and Ph.D. degree holders	in Mathematics. For those inclined towards a research career, many positions are available in research institutions and universities. For those who	wish to pursue a teaching career, well-paying teaching positions are available in plenty in private	engineering colleges. And for those who are willing to	apply mathematics to practical problems, there has been	a dramatic change in the job scene over the past few years in India. Many financial services companies,	research labs of multinational companies and others	are agressively recruiting Indian mathematicians. The	salaries offered are better than those offered to IT graduates. Students trained in pure mathematics are also actively recruited by these industries since almost	all branches of mathematics are useful to them.
-			Further information can be found in the links below 
-			
+			Further information can be found in the links below
+
 			  </p>
 		    <ul>
 			<li><a href="http://businessweek.com/print/magazine/content/06_04/b3968001.htm?chan=g1" target="_blank">Math Will Rock Your World
 			</a><br>
 			<br>
             </li>
-		    <li><a href="http://www.math.iisc.ernet.in/kpo.pdf" target="_blank">Math Ph.D.'s in Demand 
+		    <li><a href="http://www.math.iisc.ernet.in/kpo.pdf" target="_blank">Math Ph.D.'s in Demand
 		    </a><br>
 			<br>
-			<p> Given the strength of the Department in both pure and applied mathematics, our students get a balanced and	rigorous training in all aspects of mathematics. Therefore,	our students are well placed to reap the benefits of the booming job market for mathematicians.
+			<p> Given the strength of the Department in both pure and applied mathematics,
+        our students get a balanced and	rigorous training in all aspects of mathematics.
+        Therefore,	our students are well placed to reap the benefits of the booming job market for mathematicians.
             </p>
-			</td>
-          </tr>		  
-        </table>
-        <table width="778" border="0" cellspacing="0" cellpadding="4" align="center">
-          <tr bgcolor="#FFFFFF" align="center"> 
-            <td colspan="3"> 
-              <hr>
-            </td>
-          </tr>
-          <tr bgcolor="#FFFFFF" align="center" valign="top"> 
-            <td width="260"><a href="http://www.iisc.ernet.in/" target="_blank">Indian 
-              Institute of Science</a></td>
-            <td width="260"><a href="mailto:vijayan@iisc.ac.in">Contact 
-              the Administrator</a></td>
-            <td><a href="disclaimer.html">Disclaimer</a></td>
-          </tr>
-        </table>
-      </td>
-    </tr>
-  </table>
-  
-</center>
