--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </div>
 
   <div class="col-md-4">
-    <h3> <a href="seminars-all.html">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; Seminars</a></h3>
+    <h3 {text-align: center;}> <a href="seminars-all.html">Seminars</a></h3>
     {% assign sorted = (site.seminars | sort: 'date') | reverse %}
 
 <ul>
