fixed small issues, search flushed right.

--- a/career.html
+++ b/career.html
@@ -1,5 +1,7 @@
 ---
+title: Careers in Mathematics
 ---
+<h2>Careers in Mathematics</h2>
 
 		    This is the golden age (as far as job opportunities	are concerned) for Masters and Ph.D. degree holders	in Mathematics. For those inclined towards a research career, many positions are available in research institutions and universities. For those who	wish to pursue a teaching career, well-paying teaching positions are available in plenty in private	engineering colleges. And for those who are willing to	apply mathematics to practical problems, there has been	a dramatic change in the job scene over the past few years in India. Many financial services companies,	research labs of multinational companies and others	are agressively recruiting Indian mathematicians. The	salaries offered are better than those offered to IT graduates. Students trained in pure mathematics are also actively recruited by these industries since almost	all branches of mathematics are useful to them.
 			Further information can be found in the links below
