--- a/degprog-intphd.html
+++ b/degprog-intphd.html
@@ -99,7 +99,7 @@ their degree (including all examinations, project dissertations, viva voce, etc.
 		fourth semester of their joining the programme. (View the webpage <a href="newcourse.html">Courses</a> for more information.)</p>
 
               <h3>Employment Opportunities after Ph.D.</h3>
-	       <p style="margin-top: -10">Visit the webpage <a href="career.html">Career in Mathematics</a>. </p>
+	       <p style="margin-top: -10">Visit the webpage <a href="career.html">Careers in Mathematics</a>. </p>
 
 	      <h3>Other Relevant Material</h3>
                 <p style="margin-top: -10"><p><a href="http://www.math.iisc.ernet.in/quest.htm" target="_blank">Question papers of past IISc Int. Ph.D.
