--- a/degprog-phd.html
+++ b/degprog-phd.html
@@ -76,7 +76,7 @@ their degree (including all examinations, project dissertations, viva voce, etc.
 credits. (View the webpage <a href="newcourse.html">Courses</a> for more information.)</p>
 
               <h3>Employment Opportunities after Ph.D.</h3>
-               <p style="margin-top: -10">Visit the webpage <a href="career.html">Career in Mathematics</a>. </p>
+               <p style="margin-top: -10">Visit the webpage <a href="career.html">Careers in Mathematics</a>. </p>
 
               <h3>Other Relevant Material</h3>
                 <p style="margin-top: -10"><b>NBHM Ph.D. Screening Test: past question papers &amp; answer keys</b><p>
