--- a/faculty.html
+++ b/faculty.html
@@ -11,7 +11,8 @@ title: Faculty members
 <table class="table table-striped">
   {% for fac in site.data.faculty %}
   <tr>
-    <td class="col-md-7"><div><h4>{{ fac.name }} (Ph.D., {{ fac.phd }})</h4> </div>
+    <td class="col-md-7"><div><h4>
+      <a href="http://math.iisc.ac.in/~{{fac.user-id}}/">{{ fac.name }} (Ph.D., {{ fac.phd }})</a></h4> </div>
       <div class="">
         <strong>Research areas:</strong> {{ fac.research-areas}}
       </div>
@@ -22,9 +23,9 @@ title: Faculty members
         <div>
           <strong>E-mail:</strong> <a href="mailto:{{fac.user-id}}@iisc.ac.in">{{fac.user-id}}@iisc.ac.in</a>
         </div>
-        <div>
+        <!-- <div>
         <strong>Web page:</strong> <a href="http://math.iisc.ac.in/~{{fac.user-id}}/">http://math.iisc.ac.in/~{{fac.user-id}}/</a>
-      </div>
+      </div> -->
       </div>
     </td>
     <td><img class="col-md-3 pull-right img-responsive" src="{{site.baseurl}}/images/fac-{{fac.user-id}}.jpg"></td>
