--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     The department has a Ph.D. programme as well as an integrated Ph.D. programme. Undergraduate students at
     IISc can also take mathematics as a major or minor.
       <ul>
-        <li><a href="courses.html">Courses</a></li>
+        <li><a href="course-list.html">Courses</a></li>
         <li><a href="degprog-phd"></a>Ph.D. programme</li> for students with Masters degrees
         <li><a href="degprog-intphd">Integrated Ph.D. programme</a></li> for students with Bachelor degrees
         <li><a href="www.iisc.ernet.in/ug">Undergraduate programme</a></li>
