--- a/students-phd.html
+++ b/students-phd.html
@@ -17,7 +17,7 @@ title: PhD students
 <table class="table table-striped">
   {% for stu in y.items %}
   <tr>
-    <td class="col-md-7"><div><h4>{{ stu.name }}</h4> </div>
+    <td class="col-md-7"><div><a href="{{ stu.webpage}}"><h4>{{ stu.name }}</h4></a> </div>
       <div class="">
         <strong>Program:</strong> {{ stu.programme}}
       </div>
@@ -25,9 +25,6 @@ title: PhD students
           <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
         </div>
         {% if stu.webpage %}
-        <div>
-        <strong>Web page:</strong> <a href="{{ stu.webpage}}"> {{ stu.webpage }}</a>
-      </div>
       {% endif %}
       </div>
     </td>
