--- a/inspire.html
+++ b/inspire.html
@@ -8,18 +8,13 @@ title: INSPIRE fellows and DST scientists
   {% for stu in site.data.InspireDST %}
   <tr>
     <td class="col-md-7">
-      <div><h4>{{ stu.name }}</h4> </div>
+      <div><a href="{{ stu.webpage}}"><h4>{{ stu.name }}</h4></a></div>
       <div class="">
         <strong>Research areas:</strong> {{ stu.research-areas}}
       </div>
         <div>
           <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
         </div>
-        {% if stu.webpage %}
-        <div>
-        <strong>Web page:</strong> <a href="{{ stu.webpage}}"> {{ stu.webpage }}</a>
-      </div>
-      {% endif %}
       </div>
     </td>
     <td>
