--- a/postdocs.html
+++ b/postdocs.html
@@ -7,7 +7,14 @@ title: Postdocs
 <table class="table table-striped">
   {% for stu in site.data.postdocs %}
   <tr>
-    <td class="col-md-7"><div><a href="{{ stu.webpage}}"><h4>{{ stu.name }}</h4></a></div>
+    <td class="col-md-7"><div>
+      <h4>
+        {% if stu.webpage %}
+        <a href="{{ stu.webpage}}">{{ stu.name }}</a>
+        {% else %}
+        {{ stu.name }}
+        {% endif %}
+      </div>
         <div>
           <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
         </div>
