--- a/conus.html
+++ b/conus.html
@@ -20,5 +20,5 @@
   <a href="mailto:surender@iisc.ac.in">Contact
               the Administrator</a>
 
-<iframe width="600" height="450" frameborder="0" style="border:0"
+<iframe width="600" height="450" frameborder="0" style="border:0" float="right"
 src="https://www.google.com/maps/embed/v1/search?q=JRD%20Tata%20Memorial%20Library%2C%20Bengaluru%2C%20Karnataka%2C%20India%20to%20Department%20of%20Mathematics%20IISc&key=AIzaSyDkU7zJXxLGK4rnqQu3iL0LP-vqQ3ANIQQ" allowfullscreen></iframe>
