--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       </ul>
   </div>
   <div class="col-md-6">
-    <h3>Degrees and Courses</h3>
+    <h3>Teaching</h3>
     The department has a Ph.D. programme as well as an integrated Ph.D. programme. Undergraduate students at
     IISc can also take mathematics as a major or minor.
       <ul>
