--- a/students-intphd.html
+++ b/students-intphd.html
@@ -12,9 +12,9 @@ title: Integrated PhD students
 
 {% for y in years %}
 
-  <div data-role="main" class="ui-content">
-    <div data-role="collapsible">
-<h3>Year of joining: {{y.name}}</h3>
+<button class="accordion"><h3>Year of joining: {{y.name}}</h3>
+</button>
+<div class="panel">
 
 <table class="table table-striped">
   {% for stu in y.items %}
@@ -42,7 +42,6 @@ title: Integrated PhD students
   </tr>
   {%  endfor %}
 </table>
-{% endfor %}
-    </div>
-  </div>      
+{% endfor %}    
+  </div>
 </div>
