--- a/students-intphd.html
+++ b/students-intphd.html
@@ -12,7 +12,7 @@ title: Integrated PhD students
 
 {% for y in years %}
 
-<h3>Year of joining: {{y.name}}
+  <h3>Year of joining: {{y.name}}</h3>
 
 
 <table class="table table-striped">
