--- a/pubs.html
+++ b/pubs.html
@@ -9,7 +9,7 @@ title: Publications - Dept of Mathematics, IISc
 
 
 <div class="row">
-  <div class="col-md-1 bg-info">
+  <!-- <div class="col-md-1 bg-info">
     <div class="navbar navbar-fixed-bottom">
       <div class="container">
       <strong> By year</strong>
@@ -26,8 +26,8 @@ title: Publications - Dept of Mathematics, IISc
     </div>
     </div>
 
-  </div>
-  <div class="col-md-offset-1 col-md-9">
+  </div> -->
+  <div class="col-md-12">
     <h2> Publications (by year) </h2>
 
 {% assign years = site.data.pubs | group_by: "year" | sort: 'name' | reverse %}
@@ -37,7 +37,8 @@ title: Publications - Dept of Mathematics, IISc
 
 
 <ol>
-{% for paper in y.items %}
+{% assign yearpubs = y.items | sort: 'author' %}
+{% for paper in yearpubs %}
   <li>
     {{ paper.author }}, <em>{{ paper.title }}</em>, {{paper.journal}}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}.
   </li>
