--- a/course-list.html
+++ b/course-list.html
@@ -8,7 +8,7 @@ title: Courses
 {% include semester-courses.html %}
 
 
-<h3>Earlier Semesters</h3>
+<h3>Earlier semesters</h3>
 <ul>
   <li><a href="courses2016-17.html"> Academic Year 2016-17</a></li>
   <li> <a href="courses2015AD.html"> August-December 2015</a></li>
