--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <img src="department.jpg" alt="" width="100%">
   <div class="col-md-6">
     <h3>Research</h3>
-    The department is active in research in most areas of pure and applied mathematics, including Algebra,
-    Number Theory, Geometry/Topology, Probability,
-    Differential Equations, Mathematical Finance and Time Series Analysis.
+    The department is active in research in most areas of pure and applied mathematics, including algebra, analysis,
+    discrete mathematics, geometry/topology, mathematical finance, number theory, numerical analysis, partial
+    differential equations, probability, representation theory and time-series analysis.
       <ul>
         <li><a href="research-areas.html">Research Areas</a></li>
         <li><a href="faculty">Faculty</a></li>
