--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
   </div>
   <div class="col-md-6">
     <h3>Teaching</h3>
-    The department has a Ph.D. programme as well as an integrated Ph.D. programme. Undergraduate students at
-    IISc can also take mathematics as a major or minor.
+    The department has a Ph.D. programme as well as an integrated Ph.D. programme. The department participates
+    in the undergraduate programme of IISc: undergraduate students can
+    opt for mathematics as a major or a minor.
       <ul>
         <li><a href="course-list.html">Courses</a></li>
-        <li><a href="degprog-phd"></a>Ph.D. programme</li> for students with Masters degrees
+        <li><a href="degprog-phd">Ph.D. programme</a></li> for students with Masters degrees
         <li><a href="degprog-intphd">Integrated Ph.D. programme</a></li> for students with Bachelor degrees
         <li><a href="www.iisc.ernet.in/ug">Undergraduate programme</a></li>
       </ul>
