partial data for students, postdocs, staff

--- a/people-staff.html
+++ b/people-staff.html
@@ -29,18 +29,13 @@
                 <tr valign="top">
                   <td width="120">Name</td>
                   <td width="5">:</td>
-                  <td width="400">R. Mahalakshmi</td>
+                  <td width="400">A. Roopa</td>
                 </tr>
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-                  <td width="400"><a href="mailto:lakshmi@iisc.ac.in">lakshmi@iisc.ac.in</a></td>
+
                 </tr>
-                <tr valign="top">
-                  <td width="120">Home Page</td>
-                  <td width="5">:</td>
-                  <td width="400"><!--<a href="http://math.iisc.ernet.in/%7Elakshmi/" target="_blank">http://math.iisc.ernet.in/%7Elakshmi/</a>--></td>
-				  </tr>
                 <tr valign="top">
                   <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
                 </tr>
@@ -58,11 +53,6 @@
                   <td width="120">Email</td>
                   <td width="5">:</td>
                   <td width="400"><a href="mailto:rnaren@iisc.ac.in">rnaren@iisc.ac.in</a></td>
-                </tr>
-                <tr valign="top">
-                  <td width="120">Home Page</td>
-                  <td width="5">:</td>
-                  <td width="400"><!--<a href="http://math.iisc.ernet.in/%7Ernaren/" target="_blank">http://math.iisc.ernet.in/%7Ernaren/</a>--></td>
                 </tr>
                 <tr valign="top">
                   <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
