--- a/students-phd.html
+++ b/students-phd.html
@@ -27,12 +27,18 @@ title: PhD students
       {% endif %}
     </h4>
     </div>
-      <div class="">
+      <!-- <div class="">
         <strong>Program:</strong> {{ stu.programme}}
-      </div>
+      </div> -->
+      {% if stu.user-id %}
         <div>
-          <strong>E-mail:</strong> <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
+          <strong>E-mail:</strong> 
+          {% if stu.user-id %}
+           <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in
+          {% endif %}
+          </a>
         </div>
+        {% endif %}
       </div>
     </td>
     <td>
