--- a/students-intphd.html
+++ b/students-intphd.html
@@ -33,9 +33,9 @@ title: Integrated PhD students
         <div>
           <strong>E-mail:</strong>
           {% if stu.user-id %}
-           <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in
+           <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in  </a>
           {% endif %}
-          </a>
+        
         </div>
 
       </div>
