book titles in pubs; update staff

--- a/people-staff.html
+++ b/people-staff.html
@@ -30,11 +30,12 @@
                   <td width="120">Name</td>
                   <td width="5">:</td>
                   <td width="400">A. Roopa</td>
+
                 </tr>
                 <tr valign="top">
                   <td width="120">Email</td>
                   <td width="5">:</td>
-
+                  <td width="400"><a href="mailto:roopa@iisc.ac.in">roopa@iisc.ac.in</a></td>
                 </tr>
                 <tr valign="top">
                   <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
@@ -60,111 +61,9 @@
               </table>
 
 			  <br>
-			 <!-- <table class="table">
-			  <tr valign="top"><td width="120">Name</td>
-		      <td width="5">:</td>
-			  <td width="300">S. Shanmugavel (Librarian)</td>
-                           <td rowspan="4" colspan="4" width="100" height="112"><img src="students_images/staf-shan.jpg" border="1" width="100" height="110"> </td>
-                        </tr>
-			  </tr>
-			  <tr valign="top"><td width="120">Email</td>
-			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:library@iisc.ac.in">library@iisc.ac.in</a></td>
-			  </tr>
-			  <tr valign="top">
-			  <td width="120">Home Page</td>
-			  <td width="5">:<br><br><br><br><br><br><br></td>
-			  <tr valign="top">
-			  <td background="images/div-horz.gif" colspan="7">&nbsp;</td>
-			  </tr>
-			  </table>-->
-
-			 <!-- <br>
-			<table class="table">
-               <tr valign="top"><td width="120">Name</td>
-			   <td width="5">:</td>
-			   <td width="400">Rama (IMI)</td>
-			   </tr>
-			   <tr valign="top"><td width="120">Email</td>
-			   <td width="5">:</td>
-			   <td width="400"><a href="mailto:rama@iisc.ac.in">rama@iisc.ac.in</a></td>
-			   </tr>
-			   <tr valign="top">
-			   <td width="120">Home Page</td>
-			   <td width="5">:</td>
-			   <tr valign="top">
-			   <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
-			   </tr>
-			</table>-->
 
             <br>
 
-		  <!--  <table class="table">
-	          <tr valign="top">
-			  <td width="120">Name</td>
-			  <td width="5">:</td>
-			  <td width="400">Smitha (IMI)</td>
-			  </tr>
-			  <tr valign="top">
-			  <td width="120">Email</td>
-			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:imi@iisc.ac.in">imi@iisc.ac.in</a></td>
-			  </tr>
-			  <tr valign="top">
-			  <td width="120">Home Page</td>
-			  <td width="5">:</td>
-			  </tr>
-			  <tr valign="top">
-			  <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
-			  </tr>
-		   </table>
-
-              <br> -->
-
-		<!--	<table class="table">
-	          <tr valign="top">
-			  <td width="120">Name</td>
-			  <td width="5">:</td>
-			  <td width="400">Sushma (Math-Bio)</td>
-			  </tr>
-			  <tr valign="top">
-			  <td width="120">Email</td>
-			  <td width="5">:</td>
-			  <td width="400"><a href="mailto:mathbio@iisc.ac.in">mathbio@iisc.ac.in</a></td>
-			  </tr>
-			  <tr valign="top">
-			  <td width="120">Home Page</td>
-			  <td width="5">:</td>
-			  </tr>
-			  <tr valign="top">
-			  <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
-			  </tr>
-		   </table>-->
-
-
-		 <!--  <table class="table">
-		     <tr valign="top">
-		     <td width="120">Name</td>
-		     <td width="5">:</td>
-		     <td width="400">K. Surenderan (System Administrator)</td>
-
-			 </tr>
-		     <tr valign="top">
-		     <td width="120">Email</td>
-			 <td width="5">:</td>
-			 <td width="400"><a href="mailto:surender@iisc.ac.in">surender@iisc.ac.in</a></td>
-			 </tr>-->
-			<!-- <tr valign="top">
-			 <td width="120">Home Page</td>
-		     <td width="5">:</td>
-		 <td width="400"><a href="http://math.iisc.ernet.in/%7Eujey/" target="_blank">http://math.iisc.ernet.in/~ujey</a></td>
-                </tr>
-
-			 </tr>
-			 <tr valign="top">
-			 <td background="images/div-horz.gif" colspan="3">&nbsp;</td>
-			 </tr>
-		  </table>-->
 		  <br>
 			  <p>&nbsp;</p>
               <br>
