--- a/pubs.html
+++ b/pubs.html
@@ -49,7 +49,7 @@ title: Publications - Dept of Mathematics, IISc
 {% assign yearpubs = y.items | sort: 'author' %}
 {% for paper in yearpubs %}
   <li>
-    {{ paper.author }}, <em>{{ paper.title }}</em>, {{paper.journal}}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}.
+    {{ paper.author }}, <em>{{ paper.title }}</em>, {{ paper.journal }} {{ paper.booktitle }}, <strong>{{paper.volume}} </strong> ({{paper.year}}), {{paper.pages}}.
   </li>
 {% endfor %}
 </ol>
