--- a/students-phd.html
+++ b/students-phd.html
@@ -44,6 +44,9 @@ title: PhD students
           {% if stu.user-id %}
            <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
           {% endif %}
+	{% if stu.email %}
+           <a href="mailto:{{stu.email}}">{{stu.email}}</a>
+          {% endif %}
         </div>
     </td>
     <td>
