--- a/index.html
+++ b/index.html
@@ -53,5 +53,5 @@
 
   </div>
 
-   <h1><a href="funding_agen.html">Supported by UGC and DST</a></h1>
+   <a href="funding_agen.html">Supported by UGC and DST</a>
 </div>
