int phd fold, email

--- a/students-intphd.html
+++ b/students-intphd.html
@@ -10,35 +10,42 @@ title: Integrated PhD students
 {% assign students = site.data.students | where: "programme", "Integrated PhD" %}
 {% assign years = students | group_by: "year-of-joining" %}
 
+
+<ul>
 {% for y in years %}
 
-  <h3>Year of joining: {{y.name}}</h3>
 
 
-<table class="table table-striped">
+<li><h3>
+<a class="" data-toggle="collapse" href="#{{y.name}}" aria-expanded="false" aria-controls="{{y.name}}">
+  {{y.name}}
+  </a></h3>
+
+<div class="collapse" id="{{y.name}}">
+
+
+<table class="table table-striped" >
   {% for stu in y.items %}
   <tr>
-    <td class="col-md-7"><div>
+    <td class="col-md-7">
+      <div>
       <h4>
-        {% if stu.webpage %}
-        <a href="{{ stu.webpage}}">{{ stu.name }}</a>
-        {% else %}
-        {{ stu.name }}
-        {% endif %}
-       </div>
+      {% if stu.webpage %}
+      <a href="{{ stu.webpage}}">{{ stu.name }}</a>
+      {% else %}
+      {{ stu.name }}
+      {% endif %}
+    </h4>
+    </div>
       <!-- <div class="">
         <strong>Program:</strong> {{ stu.programme}}
       </div> -->
-
         <div>
           <strong>E-mail:</strong>
           {% if stu.user-id %}
-           <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in  </a>
+           <a href="mailto:{{stu.user-id}}@iisc.ac.in">{{stu.user-id}}@iisc.ac.in</a>
           {% endif %}
-        
         </div>
-
-      </div>
     </td>
     <td>
       {% if stu.image %}
@@ -47,5 +54,8 @@ title: Integrated PhD students
   </tr>
   {%  endfor %}
 </table>
+</div>
+</li>
 {% endfor %}
-  </div>
+</ul>
+</div>
