--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
 
   </div>
-<div style="float : right; bottom :0px ;">
+<div style="float : right; bottom : 0;">
    <a href="funding_agen.html">Supported by UGC and DST</a>
   </div>
 </div>
