--- a/index.html
+++ b/index.html
@@ -49,9 +49,10 @@
  <a href="seminars-all.html"><h4>More...</h4></a>
 </ul>
 
-
-<div style="float : right; bottom : 0;">
+  </div>
+  <div class="col-md-12">
+  <div style="float : right; bottom : 0;">
    <a href="funding_agen.html">Supported by UGC and DST</a>
   </div>
-  </div>
+</div>
 </div>
