--- a/funding_agen.html
+++ b/funding_agen.html
@@ -25,7 +25,7 @@
             </td>
           </tr>
         </table>
-        <table width="778" border="0" cellspacing="0" cellpadding="4" align="center">
+        <!--<table width="778" border="0" cellspacing="0" cellpadding="4" align="center">
           <tr bgcolor="#FFFFFF" align="center"> 
             <td colspan="3"> 
               <hr>
@@ -38,7 +38,7 @@
               the Administrator</a></td>
             <td><a href="disclaimer.html">Disclaimer</a></td>
           </tr>
-        </table>
+        </table>-->
       </td>
     </tr>
   </table>
