uniformized header style under personnel tab

--- a/emsci.html
+++ b/emsci.html
@@ -2,7 +2,9 @@
 title: Emeritus Scientists
 ---
 <div class="col-md-12">
-<h2 class="text-center">Emeritus Scientists</h2>
+<h2>Emeritus scientists</h2>
+  
+<h4>Alphabetically by last name</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.emiscient %}
