uniformized header style under personnel tab

--- a/nmi-dist.html
+++ b/nmi-dist.html
@@ -2,7 +2,7 @@
 title: NMI Distinguished Associates
 ---
 <div class="col-md-12">
-<h2 class="text-center">NMI Distinguished Associates</h2>
+<h2>NMI Distinguished Associates</h2>
 
 <table class="table table-striped">
   {% for stu in site.data.nmiDist %}
