--- a/inspire.html
+++ b/inspire.html
@@ -2,7 +2,9 @@
 title: INSPIRE fellows and DST scientists
 ---
 <div class="col-md-12">
-<h2 class="text-center">INSPIRE fellows and DST scientists</h2>
+<h2>INSPIRE fellows and DST scientists</h2>
+  
+  <h4>Alphabetically by last name</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.InspireDST %}
