--- a/postdocs.html
+++ b/postdocs.html
@@ -2,7 +2,9 @@
 title: Postdocs
 ---
 <div class="col-md-12">
-<h2 class="text-center">Postdocs</h2>
+<h2>Postdocs</h2>
+  
+  <h4>Alphabetically by last name</h4>
 
 <table class="table table-striped">
   {% for stu in site.data.postdocs %}
