--- a/catalogue.html
+++ b/catalogue.html
@@ -24,7 +24,7 @@ Pre-requisites : <br>
 {% if course.books %}
 Suggested books : <br>
 {% for b in course.books %}
-b . {{ course.books }}
+b) {{ course.books }}
 {% endfor %}
 {% endif %}
   <p>&nbsp;</p>
