--- a/catalogue.html
+++ b/catalogue.html
@@ -23,9 +23,7 @@ Pre-requisites : <br>
 
 {% if course.books %}
 Suggested books : <br>
-{% for b in course.books %}
-b) {{ course.books }}
-{% endfor %}
+ {{ course.books }}
 {% endif %}
   <p>&nbsp;</p>
  {% endfor %}
