--- a/catalogue.html
+++ b/catalogue.html
@@ -12,8 +12,8 @@ title: Course Catalogue
   <h4>  <a href={{ lnk }}>{{ course.code }}: {{ course.title }} </a>
   </h4>
 {% if course.prereqs %}
-Pre-requisites : <br> 
-{{ course.prereqs }} 
+Pre-requisites : <br>
+{{ course.prereqs }}
 {% endif %}
 
 
@@ -21,9 +21,15 @@ Pre-requisites : <br>
 
 
 
-{% if course.books %}
-Suggested books : <br>
- {{ course.books }}
-{% endif %}
+    {% if course.books %}
+    <h4> Suggested books : </h4>
+    <ol>
+    {% for book in course.books %}
+     <li>
+       {{ book.author}}, <em>{{ book.title }}</em>, {{ book. publ }}.</li>
+     {% endfor %}
+   </ol>
+    {% endif %}
+
   <p>&nbsp;</p>
  {% endfor %}
