--- a/catalogue.html
+++ b/catalogue.html
@@ -12,8 +12,10 @@ title: Course Catalogue
   <h4>  <a href={{ lnk }}>{{ course.code }}: {{ course.title }} </a>
   </h4>
 {% if course.prereqs %}
-Pre-requisites : <br>
+<h4> Pre-requisites : </h4> 
+<ol>
 {{ course.prereqs }}
+</ol>
 {% endif %}
 
 
@@ -25,8 +27,7 @@ Pre-requisites : <br>
     <h4> Suggested books : </h4>
     <ol>
     {% for book in course.books %}
-     <li>
-       {{ book.author}}, <em>{{ book.title }}</em>, {{ book. publ }}.</li>
+     <li> {{ book.author}}, <em>{{ book.title }}</em>, {{ book. publ }}.</li>
      {% endfor %}
    </ol>
     {% endif %}
