--- a/catalogue.html
+++ b/catalogue.html
@@ -12,10 +12,8 @@ title: Course Catalogue
   <h4>  <a href={{ lnk }}>{{ course.code }}: {{ course.title }} </a>
   </h4>
 {% if course.prereqs %}
-<h4> Pre-requisites : </h4> 
-<ol>
+<h4> Pre-requisites : </h4>  <br>
 {{ course.prereqs }}
-</ol>
 {% endif %}
 
 
