--- a/catalogue.html
+++ b/catalogue.html
@@ -13,7 +13,11 @@ title: Course Catalogue
   </h4>
 {% if course.prereqs %}
 <h4> Pre-requisites : </h4>  <br>
-{{ course.prereqs }}
+    <ol>
+    {% for pre in course.prereqs %}
+        <li>{{ course.prereqs }}</li>
+        {% endfor %}
+   </ol>
 {% endif %}
 
 
