--- a/catalogue.html
+++ b/catalogue.html
@@ -12,7 +12,7 @@ title: Course Catalogue
   <h4>  <a href={{ lnk }}>{{ course.code }}: {{ course.title }} </a>
   </h4>
 {% if course.prereqs %}
-<h4> Pre-requisites : </h4>  <br>
+<h4> Pre-requisites : </h4>  
     <ol>
     {% for pre in course.prereqs %}
         <li>{{ course.prereqs }}</li>
