--- a/catalogue.html
+++ b/catalogue.html
@@ -15,8 +15,8 @@ title: Course Catalogue
 <h4> Pre-requisites : </h4>  
     <ol>
     {% for pre in course.prereqs %}
-        <li>{{ course.prereqs }}</li>
-        {% endfor %}
+     <li> {{ pre.prereqs }} </li>
+    {% endfor %}
    </ol>
 {% endif %}
 
