--- a/catalogue.html
+++ b/catalogue.html
@@ -15,7 +15,7 @@ title: Course Catalogue
 <h4> Pre-requisites : </h4>  
     <ol>
     {% for pre in course.prereqs %}
-     <li> {{ pre.prereqs }} </li>
+     <li> {{ pre }} </li>
     {% endfor %}
    </ol>
 {% endif %}
