--- a/course-list.html
+++ b/course-list.html
@@ -1,12 +1,31 @@
 ---
 title: Courses
 ---
+<ul>
+  <li><h4><a href="#aug2017">August 2017</a></h4></li>
+  <li><h4><a href="#jan2018">January 2018</a></h4></li>
+</ul>
 
+<div id ="aug2017">
 {% assign semester = site.data.courses.aug2017 %}
 <h3 class="text-center">Courses for the semester August-December 2017</h3>
 
 {% include semester-courses.html %}
 
+</div>
+
+<ul>
+  <li><h4><a href="#aug2017">August 2017</a></h4></li>
+  <li><h4><a href="#jan2018">January 2018</a></h4></li>
+</ul>
+
+<div id ="jan2018">
+{% assign semester = site.data.courses.jan2018 %}
+<h3 class="text-center">Courses for the semester January-April 2018</h3>
+
+{% include semester-courses.html %}
+
+</div>
 
 <h3>Earlier semesters</h3>
 <ul>
