--- a/research-areas.html
+++ b/research-areas.html
@@ -4,48 +4,102 @@ title: Research areas - Maths@IISc
 
 <p>The Department aims to promote close collaboration between various mathematical disciplines and with other applied areas. The areas of current research are :</p>
 
-<h4 id="algebraic-and-combinatorial-topology-basudeb-datta">Algebraic and Combinatorial Topology (<a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a>)</h4>
-<p>Combinatorial manifolds, PL-manifolds, minimal triangulation of manifolds, triangulation of spheres and projective planes with few vertices, pseudomanifolds With small excess, equivelar polyhectral maps.</p>
+<h3 id="algebra">Algebra and Number theory</h3>
+<p>
+  <ul>
+    <li> <h4 id="commutative-algebra-and-algebraic-geometry-abhishek-banerjee-dilip-patil">Commutative Algebra and Algebraic Geometry (<a href="https://sites.google.com/site/abhishekb1313/">Abhishek Banerjee</a>, <a href="http://math.iisc.ac.in/~patil/">Dilip Patil</a>)</h4>
+<p>Study of derivation modules of curves and hypersurfaces, connection with Zariski - Lipman conjecture, monomial curves, complete intersections and set theoretic complete intersections, intersection theory of algebraic varieties, minimal number of generators for ideals and modules. Study of certain algebraic surfaces.</p></li>
+<li> <h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare">Representation theory (<a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
+    </li>
+    <li> <h4 id="matrix"> Matrix Analysis (<a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>) </h4></li>
+    <li><h4 id="number-theory-soumya-das">Number theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4></li>
+</ul>
+</p>
 
-<h4 id="commutative-algebra-and-algebraic-geometry-abhishek-banerjee-dilip-patil">Commutative Algebra and Algebraic Geometry (<a href="https://sites.google.com/site/abhishekb1313/">Abhishek Banerjee</a>, <a href="http://math.iisc.ac.in/~patil/">Dilip Patil</a>)</h4>
-<p>Study of derivation modules of curves and hypersurfaces, connection with Zariski - Lipman conjecture, monomial curves, complete intersections and set theoretic complete intersections, intersection theory of algebraic varieties, minimal number of generators for ideals and modules. Study of certain algebraic surfaces.</p>
-
-<h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>, <a href="http://math.iisc.ac.in/~gudi/">Thirupati Gudi</a>)</h4>
-<p>Homogenization of partial differential equations, controllability, viscosity solutions, numerical analysis.</p>
-
-<h4 id="differential-geometry-harish-seshadri-vamsi-pritham-pingali-subhojoy-gupta">Differential Geometry (<a href="http://math.iisc.ac.in/~harish/">Harish Seshadri</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
-<p>Manifolds of positive curvature (Ricci, scalar and isotropic), Einstein manifolds, conformal geometry (Weyl curvature and the Yamabe invariant), Gromov hyperbolic spaces, Teichmuller theory, Kahler geometry, complex Monge-Ampere type equations, metrics on Vector bundles, applications of differential geometry in computer science.</p>
-
-<h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer">Discrete Mathematics and Linear Algebra (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
-<p>Combinatorics,  Random Geometric Graphs, Positivity and analysis.</p>
-
-<h4 id="logic-and-foundations-of-mathematics-siddhartha-gadgil">Logic and foundations of mathematics (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>)</h4>
-<p>Homotopy type theory and its applications to automated theorem proving.</p>
-
-<h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>, <a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharya</a>)</h4>
-<p>Hilbert modules, multivariable operator theory, indefinite inner product spaces.</p>
-
-<h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>, <a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>)</h4>
+<h3 id="analysis">Analysis</h3>
+<p>
+  <ul> 
+    <li><h4 id="differential-equations-ak-nandakumaran-thirupati-gudi">Differential Equations (<a href="http://math.iisc.ac.in/~nands/">A.K. Nandakumaran</a>, <a href="http://math.iisc.ac.in/~gudi/">Thirupati Gudi</a>)</h4>
+<p>Homogenization of partial differential equations, controllability, viscosity solutions, numerical analysis.</p> </li>
+    <li><h4 id="functional-analysis-and-operator-theory-gadadhar-misra-tirthankar-bhattacharya">Functional Analysis and Operator Theory (<a href="http://math.iisc.ac.in/~gm/">Gadadhar Misra</a>, <a href="http://math.iisc.ac.in/~tirtha/">Tirthankar Bhattacharya</a>)</h4>
+      <p>Hilbert modules, multivariable operator theory, indefinite inner product spaces.</p></li>
+    <li><h4 id="harmonic-analysis-s-thangavelu-e-k-narayanan">Harmonic Analysis (<a href="http://math.iisc.ac.in/~veluma/">S. Thangavelu</a>, <a href="http://math.iisc.ac.in/~naru/">E. K. Narayanan</a>)</h4>
 <p>Analysis on the Heisenberg group and generalisations such as H-type groups, analysis on symmetric spaces of non compact type and on semisimple Lie groups, spectral multipliers of Laplcians and sub-Laplacians on these spaces, integral geometry on homogeneous spaces and relations with complex analysis.</p>
-
-<h4 id="low-dimensional-topology-siddhartha-gadgil-subhojoy-gupta">Low Dimensional Topology (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
-<p>Topology of three-manifolds and smooth four-manifolds, Geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p>
-
-<h4 id="mathematical-physics-arvind-ayyer-vamsi-pritham-pingali">Mathematical Physics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
-<p>Statistical mechanics, exactly solvable models, PDE arising from String theory and General Relativity.</p>
-
-<h4 id="nonlinear-dynamics-govindan-rangarajan">Nonlinear Dynamics (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>)</h4>
-<p>Couded dynamical systems, Synchronization, Turing patterns, applications of Lie algebraic methods to nonlinear Hamiltonian systems, fractal dimensional analysis, generalized replicator dynamics.</p>
-
-<h4 id="number-theory-soumya-das">Number theory (<a href="https://sites.google.com/site/somuhomepage/">Soumya Das</a>)</h4>
-
-<h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability and Stochastic Processes (<a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>)</h4>
-<p>Random matrix theory, zeroes of analytic functions, Stability and control of stochastic systems, diffusion and related topics, stochastic dynamic games, applications to manufacturing systems, first passage time problems for anomalous diffusion, long memory processes, branching particle systems, stochastic differential equations, queuing theory.</p>
-
-<h4 id="representation-theory-pooja-singla-r-venkatesh-apoorva-khare">Representation theory (<a href="https://sites.google.com/site/poojasingla7/Home">Pooja Singla</a>, <a href="http://math.iisc.ac.in/~rvenkat/">R. Venkatesh</a>, <a href="http://math.iisc.ac.in/~khare/">Apoorva Khare</a>)</h4>
-
-<h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>, <a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
+      <li> <h4 id="several-complex-variables-kaushal-verma-gautam-bharali-vamsi-pritham-pingali">Several Complex Variables (<a href="http://math.iisc.ac.in/~kverma/">Kaushal Verma</a>, <a href="http://math.iisc.ac.in/~bharali/">Gautam Bharali</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
 <p>Holomorphic mappings, convexity and its applications to function theory, finite-type domains, pluripotential theory, holomorphic interpolation, Ohsawa-Takegoshi type extension theorems, and complex dynamical systems.</p>
+    </li>
+    </li>
+</ul>
+</p>
 
-<h4 id="time-series-analysis-govindan-rangarajan-srikanth-k-iyer">Time Series Analysis (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
+<h3 id="Discrete-mathematics">Discrete Mathematics</h3>
+<p>
+<h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer">Combinatorics(<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
+<p>Combinatorics,  Random Geometric Graphs.</p>
+</p>
+
+
+<h3 id="geomtop">Geometry and Topology</h3>
+<p>
+  <ul>
+    <li> <h4 id="algebraic-and-combinatorial-topology-basudeb-datta">Algebraic and Combinatorial Topology (<a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a>)</h4>
+<p>Combinatorial manifolds, PL-manifolds, minimal triangulation of manifolds, triangulation of spheres and projective planes with few vertices, pseudomanifolds With small excess, equivelar polyhectral maps.</p>
+ </li>
+    <li><h4 id="differential-geometry-harish-seshadri-vamsi-pritham-pingali-subhojoy-gupta">Differential Geometry (<a href="http://math.iisc.ac.in/~harish/">Harish Seshadri</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
+<p>Manifolds of positive curvature (Ricci, scalar and isotropic), Einstein manifolds, conformal geometry (Weyl curvature and the Yamabe invariant), Gromov hyperbolic spaces, Teichmuller theory, Kahler geometry, complex Monge-Ampere type equations, metrics on Vector bundles, applications of differential geometry in computer science.</p>
+ </li>
+    <li><h4 id="low-dimensional-topology-siddhartha-gadgil-subhojoy-gupta">Low Dimensional Topology (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
+<p>Topology of three-manifolds and smooth four-manifolds, Geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p>
+</li>
+</ul>
+</p>
+
+<h3 id="logic">Logic and Foundations of Mathematics</h3>
+<p>
+  
+     <h4 id="logic-and-foundations-of-mathematics-siddhartha-gadgil">Automated theorem proving (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>)</h4>
+      <p>Homotopy type theory and its applications to automated theorem proving.</p> 
+</ul>
+</p>
+
+
+<h3 id="mp">Mathematical Physics</h3>
+<p>
+  <ul>
+    <li>
+    <h4 id="mathematical-physics-arvind-ayyer-vamsi-pritham-pingali">Mathematical Physics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
+<p>Statistical mechanics, exactly solvable models, PDE arising from String theory and General Relativity.</p></li>
+
+<li><h4 id="nonlinear-dynamics-govindan-rangarajan">Nonlinear Dynamics (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>)</h4>
+<p>Couded dynamical systems, Synchronization, Turing patterns, applications of Lie algebraic methods to nonlinear Hamiltonian systems, fractal dimensional analysis, generalized replicator dynamics.</p>
+    </li>
+</ul>
+</p>
+
+
+<h3 id="probab">Probability and Statistics</h3>
+<p>
+  <ul>
+    <li><h4 id="probability-and-stochastic-processes-manjunath-krishnapur-srikanth-k-iyer-mrinal-k-ghosh">Probability and Stochastic Processes (<a href="http://math.iisc.ac.in/~manju/">Manjunath Krishnapur</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>, <a href="http://math.iisc.ac.in/~mkg/">Mrinal K. Ghosh</a>)</h4>
+<p>Random matrix theory, zeroes of analytic functions, Stability and control of stochastic systems, diffusion and related topics, stochastic dynamic games, applications to manufacturing systems, first passage time problems for anomalous diffusion, long memory processes, branching particle systems, stochastic differential equations, queuing theory.</p>
+</li>
+    <li><h4 id="time-series-analysis-govindan-rangarajan-srikanth-k-iyer">Time Series Analysis (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
 <p>Application of time series analysis techniques to neuroscience esp. brain-machine interface, applications to geophysics, applications to mathematical finance.</p>
+</li>
+</ul>
+</p>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
