--- a/research-areas.html
+++ b/research-areas.html
@@ -34,8 +34,8 @@ title: Research areas - Maths@IISc
 
 <h3 id="Discrete-mathematics">Discrete Mathematics</h3>
 <p>
-<h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer">Combinatorics(<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
-<p>Combinatorics,  Random Geometric Graphs.</p>
+<h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer">Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
+<p> Random walks on rings,  Random Geometric Graphs.</p>
 </p>
 
 
@@ -49,7 +49,7 @@ title: Research areas - Maths@IISc
 <p>Manifolds of positive curvature (Ricci, scalar and isotropic), Einstein manifolds, conformal geometry (Weyl curvature and the Yamabe invariant), Gromov hyperbolic spaces, Teichmuller theory, Kahler geometry, complex Monge-Ampere type equations, metrics on Vector bundles, applications of differential geometry in computer science.</p>
  </li>
     <li><h4 id="low-dimensional-topology-siddhartha-gadgil-subhojoy-gupta">Low Dimensional Topology (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>, <a href="http://math.iisc.ac.in/~subhojoy/">Subhojoy Gupta</a>)</h4>
-<p>Topology of three-manifolds and smooth four-manifolds, Geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p>
+<p>Topology of three-manifolds and smooth four-manifolds, Hyperbolic geometry, Geometric group theory, Heegaard Floer theory and its relations to geometric topology.</p>
 </li>
 </ul>
 </p>
@@ -67,7 +67,7 @@ title: Research areas - Maths@IISc
 <p>
   <ul>
     <li>
-    <h4 id="mathematical-physics-arvind-ayyer-vamsi-pritham-pingali">Mathematical Physics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
+    <h4 id="mathematical-physics-arvind-ayyer-vamsi-pritham-pingali"> Theoretical physics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~vamsipingali/">Vamsi Pritham Pingali</a>)</h4>
 <p>Statistical mechanics, exactly solvable models, PDE arising from String theory and General Relativity.</p></li>
 
 <li><h4 id="nonlinear-dynamics-govindan-rangarajan">Nonlinear Dynamics (<a href="http://math.iisc.ac.in/~rangaraj/">Govindan Rangarajan</a>)</h4>
