--- a/research-areas.html
+++ b/research-areas.html
@@ -34,8 +34,10 @@ title: Research areas - Maths@IISc
 
 <h3 id="Discrete-mathematics">Discrete Mathematics</h3>
 <p>
-<h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer">Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
-<p> Random walks on rings,  Random Geometric Graphs.</p>
+  <ul>
+<li><h4 id="discrete-mathematics-and-linear-algebra-arvind-ayyer-apoorva-khare-srikanth-k-iyer">Combinatorics (<a href="http://math.iisc.ac.in/~arvind/">Arvind Ayyer</a>, <a href="http://math.iisc.ac.in/~skiyer/">Srikanth K. Iyer</a>)</h4>
+    <p> Random walks on rings,  Random Geometric Graphs.</p></li>
+</ul>
 </p>
 
 
@@ -56,9 +58,9 @@ title: Research areas - Maths@IISc
 
 <h3 id="logic">Logic and Foundations of Mathematics</h3>
 <p>
-  
-     <h4 id="logic-and-foundations-of-mathematics-siddhartha-gadgil">Automated theorem proving (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>)</h4>
-      <p>Homotopy type theory and its applications to automated theorem proving.</p> 
+  <ul>
+    <li> <h4 id="logic-and-foundations-of-mathematics-siddhartha-gadgil">Automated theorem proving (<a href="http://math.iisc.ac.in/~gadgil/">Siddhartha Gadgil</a>)</h4>
+      <p>Homotopy type theory and its applications to automated theorem proving.</p> </li>
 </ul>
 </p>
 
